<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    tools:context="com.example.juand.sandwichqbano.ResgistroActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/verdeqbano"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p1"
        android:textSize="25dp"
        android:gravity="center"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="25dp"
        android:textColor="@color/white"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:id="@+id/usernew"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pasword"
        android:textSize="25dp"
        android:textColor="@color/white"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:inputType="textPassword"
        android:id="@+id/paswordnew1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pasword2"
        android:textSize="25dp"
        android:textColor="@color/white"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:inputType="textPassword"
        android:id="@+id/paswordnew2"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textSize="25dp"
        android:textColor="@color/white"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:id="@+id/correo"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_gravity="center"
            android:id="@+id/aceptar"
            android:text="@string/aceptar"
            android:textColor="@color/white"
            android:textSize="25dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center"
            android:id="@+id/cancelar"
            android:text="@string/cancelar"
            android:textColor="@color/white"
            android:textSize="25dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:id="@+id/error"
            />

    </LinearLayout>

</LinearLayout>
