<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    tools:context="com.example.juand.sandwichqbano.logginActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/verdeqbano"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/titulo"
            android:textSize="30dp"
            android:layout_marginTop="30dp"

            android:gravity="center"
            android:textColor="@color/white"

            />

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@drawable/miniqbano"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="25dp"
        android:textColor="@color/white"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:id="@+id/usuario"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pasword"
        android:textSize="25dp"
        android:textColor="@color/white"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:inputType="textPassword"
        android:id="@+id/contra"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/ingresar"
        android:text="@string/boton1"
        android:textColor="@color/white"
        android:textSize="30dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/registro"
        android:text="@string/boton2"
        android:textColor="@color/white"
        android:textSize="25dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="10dp"
        android:id="@+id/error2"
        />




</LinearLayout>


